--- a/src/app/pages/metricas-decision/metricas-decision.component.html
+++ b/src/app/pages/metricas-decision/metricas-decision.component.html
@@ -107,16 +107,22 @@
     <!--<div class="app" *ngFor="let note of notes">
       <app-note-metricas (dismiss)="deleteNote($event)" (focusout)="saveNote($event)" id="{{note.id}}">{{note.content}}</app-note-metricas>
     </div>-->
-    <ul>
-      <li *ngFor="let note of notes" id="{{note.id}}">
+    <ul class="ul-container" #tableroRef>
+      <li *ngFor="let note of notes; let j = index;" id="{{note.id}}" style="cursor: pointer;" cdkDragBoundary=".tablero-container" [cdkDragData]="note" (cdkDragMoved)="onDragMove($event, 0, j)" (cdkDragEnded)="onDragEnded($event, 0, j)" [cdkDragFreeDragPosition]="dragPosition[j]" cdkDrag>
           <div class="note_toolbar">
             <span class="close material-icons" (click)="deleteNote($event, note.id)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                 <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
               </svg></span>
           </div>
-          <h2 contenteditable class="caja-nota" (blur)="saveNote($event)">{{note.content}}</h2>
+          <h2 contenteditable class="caja-nota" style="cursor: auto;" (mousedown)="$event.stopPropagation()" (blur)="saveNote($event)">{{note.content}}</h2>
       </li>
     </ul>
+    
+    <ng-container *ngFor="let eq of equipo; let i = index;">
+      <img id="puntero-{{eq}}" src="assets/images/puntero.png" style="position: absolute;width: 30px;height: 30px;display: none;"/>
+      <label id="equipo-{{eq}}" style="position: absolute;width: 100px;height: 100px;display: none;color:rgb(3, 165, 136);font-weight: bold;">{{eq}}</label>
+    </ng-container>
+    <canvas id="canvasId" #canvasRef width="100" height="100"></canvas>
   </div>
   <!-- Video -->
     <!-- Fondo Opaco   -->
